FEATURE: UIv3 | SideBar (F7 to Hide/Show) [TuxPaper]

CHANGE: Core  | Improved handling of mixed IPv4 and IPv6 bindings [The 8472]
CHANGE: UI    | Debug messages are no longer displayed by default when running the console UI [amc1]
CHANGE: UI    | The comment icon column now displays a blank icon if there is no comment (rather than no icon) [amc1]
CHANGE: Plug  | Essential plugins are now automatically re-enabled if previously disabled by user [amc1]
                 - the "Start / Stop Rules" plugin was disabled by users in the past, this was causing torrents to be stuck in "waiting" state
CHANGE: Plug  | New command line option - "azureus.safemode", to disable lots of functionality when debugging problems [amc1]                 
CHANGE: Plug  | Client ID plugin is removed [amc1]
CHANGE: Plug  | New command line option - "azureus.loadplugins", to skip plugins being loaded at startup [amc1]
CHANGE: UIv3  | Faster UI Startup [TuxPaper]
CHANGE: UIv3  | Reduced UI memory footprint [TuxPaper]

BUGFIX: Core  | Fixed DND deleting files in single-file torrents [The 8472]
BUGFIX: Core  | Fixed occasional deadlocks on startup under linux [The 8472]
BUGFIX: Core  | Made the load and unload buttons on the plugin page behave properly [amc1]

2008.07.01 | Vuze 3.1.1.0

FEATURE: Core | Added Auto Starting rule to seed large swarms first; useful when many overseeded torrents are in the queue or the upload capacity is far above average [The 8472]
FEATURE: UIv3 | Friend Chat (double click on friend icon to chat) [Gudy]
FEATURE: UIv3 | Friends Online Status
FEATURE: UIv3 | Ability to share content from your computer by dragging it to a Friend [Gudy]

CHANGE: Core  | Built-in plugins can now be disabled - it didn't work properly in earlier versions [amc1]
CHANGE: UI    | Create Vivaldi views for each DHT in use [Groundy]
CHANGE: UI    | Added support for rotation in Vivaldi view [Groundy]